agregando las propiedades de proyecto de netbeans

--- a/MN_Project/nbproject/project.properties
+++ b/MN_Project/nbproject/project.properties
@@ -36,16 +36,18 @@ dist.jlink.output=${dist.jlink.dir}/MN_Project
 endorsed.classpath=
 excludes=
 file.reference.engine.jar=C:\\Program Files\\MATLAB\\R2022b\\java\\jar\\engine.jar
+file.reference.interPoli.jar=C:\\Users\\Usuario\\Desktop\\interPoli\\for_redistribution_files_only\\interPoli.jar
 file.reference.javabuilder.jar=C:\\Program Files\\MATLAB\\R2022b\\toolbox\\javabuilder\\jar\\javabuilder.jar
-file.reference.pruebadenuevo.jar=C:\\Users\\Usuario\\Desktop\\Hola\\for_redistribution_files_only\\pruebadenuevo.jar
-file.reference.pruebaMATLAB.jar=C:\\Users\\Usuario\\Desktop\\pruebaMATLAB\\for_redistribution_files_only\\pruebaMATLAB.jar
+file.reference.jmathio.jar=C:\\Users\\Usuario\\Desktop\\jmathio.jar
+file.reference.jmathplot.jar=C:\\Users\\Usuario\\Desktop\\jmathplot.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.engine.jar}:\
-    ${file.reference.pruebaMATLAB.jar}:\
     ${file.reference.javabuilder.jar}:\
-    ${file.reference.pruebadenuevo.jar}
+    ${file.reference.interPoli.jar}:\
+    ${file.reference.jmathio.jar}:\
+    ${file.reference.jmathplot.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,7 +83,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MN_Project
-main.class=mn_project.MN_Project
+main.class=mn_project.Interfaz3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
